[tool.poetry]
name = "py-udp-server"
version = "0.1.0"
description = ""
authors = ["Ruben Cronie <ruben.cronie@t-mobile.nl>"]
readme = "README.md"
packages = [{include = "py_udp_server"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

